# glassbox-inference

./: AGENTS.md  README.md  pyproject.toml
docs/: project-plan.md
src/glassbox/: __init__.py  config.py
src/glassbox/runtime/: runtime.py
src/glassbox/server/: __init__.py  app.py  routes.py  schemas.py
tests/: conftest.py  test_cli.py  test_config.py
tests/server/: test_app.py  test_chat_completions.py  test_completions.py  test_health.py  test_schemas.py
