[project]
name = "glassbox"
version = "0.1.0"
description = "A local LLM inference engine built from the ground up"
readme = "README.md"
authors = [
    { name = "BaigHasan", email = "baig.hasan@outlook.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
glassbox = "glassbox:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
