[project]
name = "glassbox"
version = "0.1.0"
description = "A local LLM inference engine built from the ground up"
readme = "README.md"
authors = [
    { name = "BaigHasan", email = "baig.hasan@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "pytest>=9.0.3",
    "torch>=2.12.0",
    "transformers>=5.10.2",
    "uvicorn>=0.49.0",
]

[project.scripts]
glassbox = "glassbox:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
